# paxjaxlib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_activations.py  pyproject.toml  requirements.txt  setup.py  test.py  test_fixes.py  test_model.pkl  test_softmax.py  test_training.py  trained_model.pkl  verify_fixes.py
.github/workflows/: ci.yml  publish.yml
examples/: sine_regression.py  trained_model.pkl  usage.py
src/: __init__.py  activations.py  layers.py  losses.py  models.py  training.py  utils.py
src/paxjaxlib/: __init__.py  activations.py  core.py  initializers.py  layers.py  losses.py  models.py  optimizers.py  schedules.py  training.py
tests/: test_activations.py  test_initializers.py  test_layers.py  test_losses.py  test_metrics.py  test_models.py  test_regularizers.py  test_training.py
